@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2003/04/01 00:28:25 salo Exp $
+$NetBSD: distinfo,v 1.3 2004/08/13 03:22:23 minskim Exp $
 
-SHA1 (baekmuk-ttf-2.1.tar.gz) = a50dde4bc2143f2af12f8dc6e335ae26aa064a17
-Size (baekmuk-ttf-2.1.tar.gz) = 11576896 bytes
+SHA1 (baekmuk-ttf-2.2.tar.gz) = afdee34f700007de6ea87b43c92a88b7385ba65b
+Size (baekmuk-ttf-2.2.tar.gz) = 29241850 bytes
