@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6857 2004/08/13 03:15:47 minskim Exp $
+$NetBSD: CHANGES,v 1.6858 2004/08/13 03:22:22 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3805,3 +3805,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated cvsync to 0.24.16nb1 [minskim 2004-08-12]
 	Updated opera7 to 7.54 [jdolecek 2004-08-13]
 	Updated alee-ttf to 1.3 [minskim 2004-08-13]
+	Updated baekmuk-ttf to 2.2 [minskim 2004-08-13]
